[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 4.32599
margin_top = 32.656
margin_right = 66.326
margin_bottom = 52.656
text = "Step"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 4.32599
margin_top = 6.65601
margin_right = 65.326
margin_bottom = 26.656
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="button_down" from="Button" to="." method="_on_Button_button"]
[connection signal="button_down" from="Button2" to="." method="_on_Run_down"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
